🐒chaneg source for ubuntu dockerfile

--- a/zsh.sh.ubuntu/Dockerfile
+++ b/zsh.sh.ubuntu/Dockerfile
@@ -3,8 +3,8 @@ FROM ubuntu:18.04
 LABEL maintaine gunjianpan '<iofu728@163.com>'
 
 ENV OH_MY_ZSH_URL 'https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh'
-ENV ZSH_LINUX_URL 'https://raw.github.com/iofu728/Model_retrieval/develop/deploy/zsh_ubuntu.sh'
-ENV ZSH_SH_PATH 'zsh_linux.sh'
+ENV ZSH_LINUX_URL 'https://raw.github.com/iofu728/zsh.sh/master/deploy/zsh.sh'
+ENV ZSH_SH_PATH 'zsh.sh'
 ENV ZSH /root/.oh-my-zsh
 ENV IS_DOCKER docker
 
